# python-grpckit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
grpckit/: CHANGELOG.md  __init__.py  _internal.py  app.py  client.py  common.py  config.py  constant.py  ctx.py  exception.py  globals.py  interceptor.py  local.py  main.py  service.py  types.py  wrapper.py
grpckit/extensions/: sentry.py
grpckit/pb/: default.proto  default_pb2.py  wrapper.proto  wrapper_pb2.py
grpckit/utils/: __init__.py  parser.py  proto.py
